implementei melhorias e padronizações, no sistema modulo juridico, implementei melhorias tambem no lembrete de Audiencia 1 dia anterior e processos tambem 1 dia anterior vai chegar lembrete